Fix incorrect Derby class name, do some formatting, and don't run Ant with security manager